--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,19 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.blackducksoftware.integration</groupId>
+
+  <parent>
+    <groupId>com.blackducksoftware.integration</groupId>
+    <artifactId>hub-eclipse-plugin-configuration</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>./releng/configuration</relativePath>
+  </parent>
+
   <artifactId>hub-eclipse-plugin-root</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <parent>
-     <groupId>com.blackducksoftware.integration</groupId>
-     <artifactId>hub-eclipse-plugin-configuration</artifactId>
-     <version>1.0.0-SNAPSHOT</version>
-  	 <relativePath>./releng/configuration</relativePath>
-  </parent>
 
   <modules>
-  	 <module>bundles</module>
+    <module>bundles</module>
   </modules>
 </project>
