--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <groupId>com.blackducksoftware.integration</groupId>
-  <artifactId>plugin</artifactId>
+  <artifactId>hub-eclipse-plugin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 </project>
