--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,8 @@
 
   <parent>
     <groupId>com.blackducksoftware.integration</groupId>
-    <artifactId>hub-eclipse-plugin-configuration</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>./releng/configuration</relativePath>
+    <artifactId>common-maven-parent</artifactId>
+    <version>1.1.0</version>
   </parent>
 
   <artifactId>hub-eclipse-plugin-root</artifactId>
@@ -14,6 +13,66 @@
   <packaging>pom</packaging>
 
   <modules>
-    <module>bundles</module>
+    <module>bundles/plugin</module>
   </modules>
+
+  <properties>
+    <neon-repo.url>http://download.eclipse.org/releases/neon</neon-repo.url>
+    <tycho.version>0.26.0</tycho.version>
+  </properties>
+
+  <repositories>
+    <repository>
+      <id>neon</id>
+      <url>${neon-repo.url}</url>
+      <layout>p2</layout>
+    </repository>
+
+  </repositories>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <extensions>true</extensions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>target-platform-configuration</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <environments>
+            <environment>
+              <os>linux</os>
+              <ws>gtk</ws>
+              <arch>x86</arch>
+            </environment>
+            <environment>
+              <os>linux</os>
+              <ws>gtk</ws>
+              <arch>x86_64</arch>
+            </environment>
+            <environment>
+              <os>win32</os>
+              <ws>win32</ws>
+              <arch>x86</arch>
+            </environment>
+            <environment>
+              <os>win32</os>
+              <ws>win32</ws>
+              <arch>x86_64</arch>
+            </environment>
+            <environment>
+              <os>macosx</os>
+              <ws>cocoa</ws>
+              <arch>x86_64</arch>
+            </environment>
+          </environments>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
