modified MANIFEST/poms to make project build as osgi bundle, and use both osgi bundles and external maven (pom-only, non-osgi) dependencies in build

--- a/bundles/plugin/build.properties
+++ b/bundles/plugin/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
+output.. = target/dependencies
 bin.includes = plugin.xml,\
                META-INF/,\
                .
