--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -9,8 +9,36 @@
     <relativePath>../..</relativePath>
   </parent>
 
-  <groupId>com.blackducksoftware.integration</groupId>
   <artifactId>hub-eclipse-plugin</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.10</version>
+        <executions>
+          <execution>
+            <id>unpack</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>com.blackducksoftware.integration</groupId>
+                  <artifactId>build-tool-common</artifactId>
+                  <version>2.0.8</version>
+                  <type>jar</type>
+                  <outputDirectory>./target/dependencies</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
