--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,15 @@
 
   </repositories>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.blackducksoftware.integration</groupId>
+      <artifactId>build-tool-common</artifactId>
+      <version>2.0.8</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
