--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       <version>2.0.8</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
   </dependencies>
 
   <build>
