--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -12,6 +12,29 @@
   <artifactId>hub-eclipse-plugin</artifactId>
   <packaging>eclipse-plugin</packaging>
 
+  <properties>
+    <output-dir>./target/dependencies</output-dir>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.blackducksoftware.integration</groupId>
+      <artifactId>build-tool-common</artifactId>
+      <version>2.0.8</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blackducksoftware.integration</groupId>
+      <artifactId>hub-common</artifactId>
+      <version>1.4.8-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
@@ -32,14 +55,14 @@
                   <artifactId>build-tool-common</artifactId>
                   <version>2.0.8</version>
                   <type>jar</type>
-                  <outputDirectory>./target/dependencies</outputDirectory>
+                  <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
                 <artifactItem>
-                  <groupId>org.apache.commons</groupId>
-                  <artifactId>commons-lang3</artifactId>
-                  <version>3.4</version>
+                  <groupId>com.blackducksoftware.integration</groupId>
+                  <artifactId>hub-common</artifactId>
+                  <version>1.4.8-SNAPSHOT</version>
                   <type>jar</type>
-                  <outputDirectory>./target/dependencies</outputDirectory>
+                  <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
               </artifactItems>
             </configuration>
