--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -64,6 +64,20 @@
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
+                <artifactItem>
+                  <groupId>org.restlet.jse</groupId>
+                  <artifactId>org.restlet.ext.httpclient</artifactId>
+                  <version>2.3.7</version>
+                  <type>jar</type>
+                  <outputDirectory>${output-dir}</outputDirectory>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.restlet.jse</groupId>
+                  <artifactId>org.restlet</artifactId>
+                  <version>2.3.7</version>
+                  <type>jar</type>
+                  <outputDirectory>${output-dir}</outputDirectory>
+                </artifactItem>
               </artifactItems>
             </configuration>
           </execution>
