--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -33,6 +33,11 @@
       <artifactId>hub-common</artifactId>
       <version>1.4.8-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.blackducksoftware.integration</groupId>
+      <artifactId>integration-common</artifactId>
+      <version>1.0.2-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -75,6 +80,13 @@
                   <groupId>org.restlet.jse</groupId>
                   <artifactId>org.restlet</artifactId>
                   <version>2.3.7</version>
+                  <type>jar</type>
+                  <outputDirectory>${output-dir}</outputDirectory>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>com.blackducksoftware.integration</groupId>
+                  <artifactId>integration-common</artifactId>
+                  <version>1.0.2-SNAPSHOT</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
