--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>com.blackducksoftware.integration</groupId>
       <artifactId>integration-common</artifactId>
-      <version>1.0.2-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
@@ -86,7 +86,7 @@
                 <artifactItem>
                   <groupId>com.blackducksoftware.integration</groupId>
                   <artifactId>integration-common</artifactId>
-                  <version>1.0.2-SNAPSHOT</version>
+                  <version>1.0.0</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
