--- a/bundles/plugin-test/pom.xml
+++ b/bundles/plugin-test/pom.xml
@@ -55,6 +55,13 @@
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
+                <artifactItem>
+                  <groupId>org.restlet.jee</groupId>
+                  <artifactId>org.restlet</artifactId>
+                  <version>2.1.4</version>
+                  <type>jar</type>
+                  <outputDirectory>${output-dir}</outputDirectory>
+                </artifactItem>
               </artifactItems>
             </configuration>
           </execution>
