--- a/bundles/plugin-test/pom.xml
+++ b/bundles/plugin-test/pom.xml
@@ -26,6 +26,24 @@
         <configuration>
           <useUIHarness>true</useUIHarness>
           <argLine>-XstartOnFirstThread</argLine>
+          <useUIThread>false</useUIThread>
+          <product>org.eclipse.sdk.ide</product>
+          <application>org.eclipse.ui.ide.workbench</application>
+          <dependencies>
+            <dependency>
+              <artifactId>org.eclipse.sdk.feature.group</artifactId>
+              <type>p2-installable-unit</type>
+            </dependency>
+          </dependencies>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-compiler-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <compilerArgument>-warn:none</compilerArgument>
+          <compilerArgument>-err:none</compilerArgument>
         </configuration>
       </plugin>
       <plugin>
@@ -44,21 +62,21 @@
                 <artifactItem>
                   <groupId>com.blackducksoftware.integration</groupId>
                   <artifactId>hub-common</artifactId>
-                  <version>1.4.8-SNAPSHOT</version>
+                  <version>1.4.9-SNAPSHOT</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
                 <artifactItem>
                   <groupId>com.blackducksoftware.integration</groupId>
                   <artifactId>integration-common</artifactId>
-                  <version>1.0.0</version>
+                  <version>1.0.2</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
                 <artifactItem>
-                  <groupId>org.restlet.jee</groupId>
+                  <groupId>org.restlet.jse</groupId>
                   <artifactId>org.restlet</artifactId>
-                  <version>2.1.4</version>
+                  <version>2.3.7</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
