--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.blackducksoftware.integration</groupId>
     <artifactId>common-maven-parent</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.5</version>
   </parent>
 
   <artifactId>hub-eclipse-plugin-root</artifactId>
@@ -28,7 +28,6 @@
       <url>${neon-repo.url}</url>
       <layout>p2</layout>
     </repository>
-
   </repositories>
 
   <build>
@@ -70,6 +69,7 @@
               <os>macosx</os>
               <ws>cocoa</ws>
               <arch>x86_64</arch>
+              <argLine>-XstartOnFirstThread</argLine>
             </environment>
           </environments>
         </configuration>
