--- a/bundles/plugin-test/pom.xml
+++ b/bundles/plugin-test/pom.xml
@@ -74,6 +74,13 @@
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
                 <artifactItem>
+                  <groupId>com.blackducksoftware.integration</groupId>
+                  <artifactId>build-tool-common</artifactId>
+                  <version>2.0.11-SNAPSHOT</version>
+                  <type>jar</type>
+                  <outputDirectory>${output-dir}</outputDirectory>
+                </artifactItem>
+                <artifactItem>
                   <groupId>org.restlet.jse</groupId>
                   <artifactId>org.restlet</artifactId>
                   <version>2.3.7</version>
@@ -140,6 +147,13 @@
                   <groupId>org.javassist</groupId>
                   <artifactId>javassist</artifactId>
                   <version>3.20.0-GA</version>
+                  <type>jar</type>
+                  <outputDirectory>${output-dir}</outputDirectory>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.eclipse.tycho</groupId>
+                  <artifactId>org.eclipse.osgi</artifactId>
+                  <version>3.11.0.v20160603-1336</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
