--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>com.blackducksoftware.integration</groupId>
       <artifactId>build-tool-common</artifactId>
-      <version>2.0.10</version>
+      <version>2.0.11-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -58,7 +58,7 @@
                 <artifactItem>
                   <groupId>com.blackducksoftware.integration</groupId>
                   <artifactId>build-tool-common</artifactId>
-                  <version>2.0.10</version>
+                  <version>2.0.11-SNAPSHOT</version>
                   <type>jar</type>
                   <outputDirectory>${output-dir}</outputDirectory>
                 </artifactItem>
