trying to make plugin installable

--- a/bundles/plugin/build.properties
+++ b/bundles/plugin/build.properties
@@ -1,7 +1,7 @@
 source.. = src/
-src.excludes = src-test/
 output.. = bin/
 output.. = target/dependencies
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               target/dependencies/,\
+               .,\
