--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>com.blackducksoftware.integration</groupId>
     <artifactId>common-maven-parent</artifactId>
     <version>1.1.5</version>
+    <relativePath></relativePath>
   </parent>
 
   <artifactId>hub-eclipse-plugin-root</artifactId>
