--- a/bundles/plugin/build.properties
+++ b/bundles/plugin/build.properties
@@ -3,5 +3,8 @@ output.. = bin/
 output.. = target/dependencies
 bin.includes = plugin.xml,\
                META-INF/,\
-               target/dependencies/,\
                .,\
+               lib/
+jars.compile.order = .,\
+                     lib/
+source.lib/ = target/dependencies/
