--- a/bundles/plugin-test/pom.xml
+++ b/bundles/plugin-test/pom.xml
@@ -6,6 +6,7 @@
     <groupId>com.blackducksoftware.integration</groupId>
     <artifactId>hub-eclipse-plugin-root</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <artifactId>hub-eclipse-plugin-test</artifactId>
