--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
   </modules>
 
   <properties>
+    <m2e-update-site>http://download.eclipse.org/technology/m2e/releases</m2e-update-site>
     <neon-repo.url>http://download.eclipse.org/releases/neon</neon-repo.url>
     <tycho.version>0.26.0</tycho.version>
   </properties>
@@ -29,6 +30,11 @@
     <repository>
       <id>neon</id>
       <url>${neon-repo.url}</url>
+      <layout>p2</layout>
+    </repository>
+    <repository>
+      <id>m2e</id>
+      <url>${m2e-update-site}</url>
       <layout>p2</layout>
     </repository>
   </repositories>
@@ -75,6 +81,15 @@
               <argLine>-XstartOnFirstThread</argLine>
             </environment>
           </environments>
+          <dependency-resolution>
+            <extraRequirements>
+              <requirement>
+                <type>eclipse-feature</type>
+                <id>org.eclipse.m2e.feature</id>
+                <versionRange>1.7.0.20160603-1933</versionRange>
+              </requirement>
+            </extraRequirements>
+          </dependency-resolution>
         </configuration>
       </plugin>
     </plugins>
