updated preferences and defaults

--- a/bundles/plugin/plugin.xml
+++ b/bundles/plugin/plugin.xml
@@ -128,9 +128,9 @@
       		category="BlackDuck">
       </page>
       <page
-      		class="com.blackducksoftware.integration.eclipseplugin.preferences.ProjectSpecificPreferenceDefaults"
-      		id="ProjectSpecificPreferenceDefaults"
-      		name="Project Specific Preference Defaults"
+      		class="com.blackducksoftware.integration.eclipseplugin.preferences.PreferenceDefaults"
+      		id="DefaultConfig"
+      		name="Black Duck Default Settings"
       		category="BlackDuck">
       </page>
    </extension>
