--- a/bundles/plugin-update-site/pom.xml
+++ b/bundles/plugin-update-site/pom.xml
@@ -43,6 +43,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <id>default-clean-1</id>
