--- a/bundles/plugin/pom.xml
+++ b/bundles/plugin/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>com.blackducksoftware.integration</groupId>
       <artifactId>hub-common</artifactId>
-      <version>1.4.11</version>
+      <version>1.5.2</version>
     </dependency>
     <dependency>
       <groupId>com.blackducksoftware.integration</groupId>
@@ -46,6 +46,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.10</version>
+        <!--$NO-MVN-MAN-VER$-->
         <executions>
           <execution>
             <id>unpack</id>
