--- a/bundles/plugin-test/pom.xml
+++ b/bundles/plugin-test/pom.xml
@@ -25,7 +25,7 @@
         <version>${tycho.version}</version>
         <configuration>
           <useUIHarness>true</useUIHarness>
-          <argLine>${os-jvm-flags}</argLine>
+          <argLine>${tycho.testArgLine} ${os-jvm-flags}</argLine>
           <useUIThread>false</useUIThread>
           <product>org.eclipse.sdk.ide</product>
           <application>org.eclipse.ui.ide.workbench</application>
@@ -183,38 +183,6 @@
       </activation>
       <properties>
         <os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
-      </properties>
-    </profile>
-    <!-- This profile is used to gather code coverage for Sonar -->
-    <profile>
-      <id>codeCoverage</id>
-
-      <build>
-        <plugins>
-          <!-- Enabling use of jacoco -->
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.5.3.201107060350</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-                <configuration>
-                  <!-- Where to put jacoco coverage report -->
-                  <destFile>${sonar.jacoco.reportPath}</destFile>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-      <properties>
-        <!-- Properties to enable jacoco code coverage analysis -->
-        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.jacoco.reportPath>./target/jacoco.exec</sonar.jacoco.reportPath>
       </properties>
     </profile>
   </profiles>
