updated some tests and hopefully fixed jenkins jacoco coverage

--- a/bundles/plugin-test/pom.xml
+++ b/bundles/plugin-test/pom.xml
@@ -185,5 +185,117 @@
         <os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
       </properties>
     </profile>
+    <profile>
+      <id>windows-jvm-flags</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <!-->
+    <profile>
+      <id>unix-jvm-flags</id>
+      <activation>
+        <os>
+          <family>unix</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <!-->
+    <profile>
+      <id>dos-jvm-flags</id>
+      <activation>
+        <os>
+          <family>dos</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <profile>
+      <id>netware-jvm-flags</id>
+      <activation>
+        <os>
+          <family>netware</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <profile>
+      <id>os/2-jvm-flags</id>
+      <activation>
+        <os>
+          <family>os/2</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <profile>
+      <id>tandem-jvm-flags</id>
+      <activation>
+        <os>
+          <family>tandem</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <profile>
+      <id>win9x-jvm-flags</id>
+      <activation>
+        <os>
+          <family>win9x</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <profile>
+      <id>z/os-jvm-flags</id>
+      <activation>
+        <os>
+          <family>z/os</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <profile>
+      <id>os/400-jvm-flags</id>
+      <activation>
+        <os>
+          <family>os/400</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
+    <profile>
+      <id>openvms-jvm-flags</id>
+      <activation>
+        <os>
+          <family>openvms</family>
+        </os>
+      </activation>
+      <properties>
+        <os-jvm-flags></os-jvm-flags>
+      </properties>
+    </profile>
   </profiles>
 </project>
